Fix flicker on AngularJs startup

--- a/m11n-archetypes-jbake/src/main/resources/archetype-resources/__rootArtifactId__-assets/app/styles/main.less
+++ b/m11n-archetypes-jbake/src/main/resources/archetype-resources/__rootArtifactId__-assets/app/styles/main.less
@@ -16,6 +16,10 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 html,body {
   height: 100%;
   overflow: hidden;
